flux/manifest/example2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployement
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
      version: v1
  template:
    metadata:
      labels:
        app: hello-app
        version: v1
    spec:
      containers:
      - image: hello-app:1.0
        imagePullPolicy: IfNotPresent
        name: hello-app
        ports:
        - containerPort: 80
