flux/manifest/example2/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-app
  name: hello-app-service
  namespace: dev
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: hello-app
  type: ClusterIP
